<resources>
    <string name="app_name">My Application</string>
    <string name="login">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="emailid">Email id</string>
    <string name="confirm">Confirm</string>
    <string name="signup">SIGN UP</string>
    <string name="title_activity_sign_in">SignIn</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>